--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <select id="sabor2" onchange="updateCart()">
         <option>Fresa</option>
         <option>Blueberry</option>
-        <option>Manzana</option>
+        <option>platano</option>
       </select>
       <label>Cantidad:</label>
       <input type="number" id="qty2" value="0" min="0" onchange="updateCart()" />
