--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <option>Fresa</option>
         <option>Blueberry</option>
         <option>platano</option>
+        <option>platano</option>
       </select>
       <label>Cantidad:</label>
       <input type="number" id="qty2" value="0" min="0" onchange="updateCart()" />
