--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div class="product-box">
       <img src="vape1.jpg" alt="Vape 1" />
-      <h3>Iplay 3h</h3>
+      <h3>Pillow Talk 13mL by Pillow Talk</h3>
       <label>Hits: 8000</label>
       <p>Precio: $200</p>
       <p>Sabor:</p>
