--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h2>Selecciona tu producto</h2>
 
     <div class="product-box">
-      <img src="re.png" alt="Vape 1" />
+      <img src="va.png" alt="Vape 1" />
       <h3>Pillow Talk 13mL</h3>
       <label>Hits: 8000</label>
       <p>Precio: $200</p>
