--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <img id="logo" src="logo.png" alt="Logo">
     <h1 id="brand">SMiLe</h1>
     <div id="cart-header">
-      <img src="cart.png" alt="Carrito">
+      <img src="c.png" alt="Carrito">
       <div id="cart-count">Total: 0 productos - $0</div>
     </div>
     <h2>Selecciona tu producto</h2>
