--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 <body>
   <div class="page active" id="page1">
-    <img id="logo" src="logo.png" alt="Logo">
+    <img id="logo" src="lo.png" alt="Logo">
     <h1 id="brand">SMiLe</h1>
     <div id="cart-header">
       <img src="c.png" alt="Carrito">
