--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
   <input type="number" id="qty1" value="0" min="0" onchange="updateCart()" />
 </div>
 
+  <h3>Pillow Talk 13mL</h3>
+  <label>Hits: 8000</label>
+  <p>Precio: $200</p>
+  <p>Sabor:</p>
+  <select id="sabor1" onchange="updateCart()">
+    <option>Sandía</option>
+    <option>Mango</option>
+    <option>Uva</option>
+  </select>
+  <label>Cantidad:</label>
+  <input type="number" id="qty1" value="0" min="0" onchange="updateCart()" />
+</div>
+
 
     <div class="product-box">
       <img src="vape2.jpg" alt="Vape 2" />
