--- a/index.html
+++ b/index.html
@@ -93,149 +93,6 @@
       text-align: center;
       font-weight: bold;
     }
-    <style>
-  body {
-    margin: 0;
-    padding: 0;
-    background-color: #0f1624;
-    font-family: 'Montserrat', sans-serif;
-    color: white;
-  }
-  .page {
-    display: none;
-    padding: 2rem;
-    animation: fadeIn 0.5s ease-in-out forwards;
-  }
-  .active {
-    display: block;
-  }
-  .btn {
-    padding: 12px 20px;
-    background-color: #f78da7;
-    border: none;
-    border-radius: 40px;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    margin: 10px 5px;
-    transition: all 0.3s ease;
-  }
-  .btn:hover {
-    background-color: #ff4d6d;
-  }
-  select, input[type="number"], input[type="time"], input[type="date"] {
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 12px;
-    margin-top: 10px;
-    display: block;
-  }
-  .product-box {
-    border-radius: 20px;
-    padding: 1rem;
-    margin-bottom: 2rem;
-    background-color: #1e2a3a;
-  }
-  .product-box img {
-    width: 100px;
-    height: auto;
-    display: block;
-    margin-bottom: 10px;
-  }
-  #logo {
-    display: block;
-    margin: 0 auto;
-    max-height: 80px;
-  }
-  #brand {
-    text-align: center;
-    font-size: 2rem;
-    margin: 0.5rem 0 2rem;
-  }
-  #cart-header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-bottom: 1rem;
-  }
-  #cart-header img {
-    width: 30px;
-    margin-right: 10px;
-  }
-  #cart-count {
-    font-size: 1rem;
-  }
-  #transferencia-info {
-    display: none;
-    margin-top: 10px;
-    background-color: #fff5f520;
-    padding: 1rem;
-    border-radius: 12px;
-  }
-  #mensaje-final {
-    background-color: #1e2a3a;
-    padding: 1rem;
-    border-radius: 15px;
-    margin-top: 20px;
-    color: #00ff88;
-    text-align: center;
-    font-weight: bold;
-  }
-
-  /* NUEVO CSS PARA EL MODAL DE IMÁGENES */
-  /* Estilos para la vista ampliada (modal) */
-  .modal {
-    display: none; /* Inicialmente oculto */
-    position: fixed; /* Fijo para cubrir toda la pantalla */
-    z-index: 1000; /* Asegura que se vea encima de otros elementos */
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro semitransparente */
-    justify-content: center; /* Centrar el contenido en el modal */
-    align-items: center; /* Centrar el contenido en el modal */
-  }
-
-  /* Contenido del modal */
-  .modal-content {
-    position: relative;
-    max-width: 90%; /* Máximo ancho del modal */
-    max-height: 90%; /* Máxima altura del modal */
-  }
-
-  /* Imagen dentro del modal */
-  .modal img {
-    width: 100%; /* Hacer la imagen adaptativa al tamaño del modal */
-    height: auto; /* Mantener las proporciones de la imagen */
-  }
-
-  /* Estilo para los botones de navegación y cerrar */
-  .close-btn, .next-btn, .prev-btn {
-    position: absolute;
-    top: 50%; /* Centrar verticalmente */
-    transform: translateY(-50%); /* Ajustar la posición para que esté centrado */
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo negro semitransparente */
-    color: white;
-    font-size: 30px;
-    padding: 10px;
-    cursor: pointer;
-    border: none;
-    border-radius: 50%; /* Botones redondeados */
-  }
-
-  .close-btn {
-    right: 10px; /* Botón de cerrar en la esquina superior derecha */
-    top: 10px;
-  }
-
-  .next-btn {
-    right: 10px; /* Flecha siguiente en la parte derecha */
-  }
-
-  .prev-btn {
-    left: 10px; /* Flecha anterior en la parte izquierda */
-  }
   </style>
 </head>
 <body>
@@ -247,39 +104,21 @@
       <div id="cart-count">Total: 0 productos - $0</div>
     </div>
     <h2>Selecciona tu producto</h2>
-   <div class="product-box">
-  <!-- Contenedor de imágenes del producto -->
-  <div class="product-images">
-    <img class="product-thumbnail" src="va.png" alt="Vape 1" data-full="vape1_large.jpg" />
-    <img class="product-thumbnail" src="va2.png" alt="Vape 1" data-full="vape1_large2.jpg" />
-    <!-- Puedes añadir más imágenes aquí si quieres -->
-  </div>
-  <h3>Pillow Talk 13mL</h3>
-  <label>Hits: 8000</label>
-  <p>Precio: $200</p>
-  <p>Sabor:</p>
-  <select id="sabor1" onchange="updateCart()">
-    <option>Sandía</option>
-    <option>Mango</option>
-    <option>Uva</option>
-  </select>
-  <label>Cantidad:</label>
-  <input type="number" id="qty1" value="0" min="0" onchange="updateCart()" />
-</div>
 
-  <h3>Pillow Talk 13mL</h3>
-  <label>Hits: 8000</label>
-  <p>Precio: $200</p>
-  <p>Sabor:</p>
-  <select id="sabor1" onchange="updateCart()">
-    <option>Sandía</option>
-    <option>Mango</option>
-    <option>Uva</option>
-  </select>
-  <label>Cantidad:</label>
-  <input type="number" id="qty1" value="0" min="0" onchange="updateCart()" />
-</div>
-
+    <div class="product-box">
+      <img src="va.png" alt="Vape 1" />
+      <h3>Pillow Talk 13mL</h3>
+      <label>Hits: 8000</label>
+      <p>Precio: $200</p>
+      <p>Sabor:</p>
+      <select id="sabor1" onchange="updateCart()">
+        <option>Sandía</option>
+        <option>Mango</option>
+        <option>Uva</option>
+      </select>
+      <label>Cantidad:</label>
+      <input type="number" id="qty1" value="0" min="0" onchange="updateCart()" />
+    </div>
 
     <div class="product-box">
       <img src="vape2.jpg" alt="Vape 2" />
@@ -384,7 +223,7 @@
           totalPrecio += p.cantidad * 200;
         }
       });
-      document.getElementById("cart-count").innerText = `Total: ${totalCantidad} productos - $${totalPrecio}`;
+      document.getElementById("cart-count").innerText = Total: ${totalCantidad} productos - $${totalPrecio};
     }
 
     function prepareCart() {
@@ -413,7 +252,7 @@
       carrito.forEach(p => {
         let subtotal = p.cantidad * 200;
         total += subtotal;
-        resumenHTML += `
+        resumenHTML += 
           <div style="margin-bottom: 20px;">
             <img src="${p.img}" style="max-width:100px"><br>
             <ul>
@@ -422,93 +261,25 @@
               <li><strong>Cantidad:</strong> ${p.cantidad}</li>
               <li><strong>Subtotal:</strong> $${subtotal}</li>
             </ul>
-          </div>`;
+          </div>;
       });
       let hora = document.getElementById("hora").value;
       let dia = document.getElementById("dia").value;
       let lugar = document.getElementById("lugar").value;
-      resumenHTML += `
+      resumenHTML += 
         <ul>
           <li><strong>Entrega en:</strong> ${lugar}</li>
           <li><strong>Día:</strong> ${dia}</li>
           <li><strong>Hora:</strong> ${hora}</li>
           <li><strong>Método de pago:</strong> ${pago}</li>
           <li><strong>Total a pagar:</strong> $${total}</li>
-        </ul>`;
+        </ul>;
       document.getElementById("resumen").innerHTML = resumenHTML;
     }
 
     function finalizarPedido() {
       document.getElementById("mensaje-final").innerText = "PEDIDO FINALIZADO\nToma captura y mándala a IG: smile__vp";
     }
-    <script>
-  let modal = document.createElement('div');
-  let modalImg = document.createElement('img');
-  let closeBtn = document.createElement('button');
-  let nextBtn = document.createElement('button');
-  let prevBtn = document.createElement('button');
-  let currentImgIndex = 0;
-  let images = [];
-
-  // Configuración inicial del modal
-  modal.classList.add('modal');
-  modalImg.classList.add('modal-content');
-  closeBtn.classList.add('close-btn');
-  closeBtn.innerHTML = '&times;';
-  nextBtn.classList.add('next-btn');
-  nextBtn.innerHTML = '→';
-  prevBtn.classList.add('prev-btn');
-  prevBtn.innerHTML = '←';
-
-  // Añadir elementos al modal
-  modal.appendChild(closeBtn);
-  modal.appendChild(modalImg);
-  modal.appendChild(nextBtn);
-  modal.appendChild(prevBtn);
-  document.body.appendChild(modal);
-
-  // Función para abrir el modal con la imagen seleccionada
-  function openModal(event) {
-    images = document.querySelectorAll('.product-thumbnail');
-    let src = event.target.getAttribute('data-full');
-    modalImg.src = src;
-    modal.style.display = 'flex';
-    currentImgIndex = [...images].indexOf(event.target);
-  }
-
-  // Función para cerrar el modal
-  function closeModal() {
-    modal.style.display = 'none';
-  }
-
-  // Función para navegar a la siguiente imagen
-  function nextImage() {
-    currentImgIndex = (currentImgIndex + 1) % images.length;
-    modalImg.src = images[currentImgIndex].getAttribute('data-full');
-  }
-
-  // Función para navegar a la imagen anterior
-  function prevImage() {
-    currentImgIndex = (currentImgIndex - 1 + images.length) % images.length;
-    modalImg.src = images[currentImgIndex].getAttribute('data-full');
-  }
-
-  // Asignar eventos a las imágenes
-  document.querySelectorAll('.product-thumbnail').forEach(image => {
-    image.addEventListener('click', openModal);
-  });
-
-  // Asignar eventos a los botones de navegación
-  closeBtn.addEventListener('click', closeModal);
-  nextBtn.addEventListener('click', nextImage);
-  prevBtn.addEventListener('click', prevImage);
-
-  // Cerrar el modal si se hace clic fuera de la imagen
-  modal.addEventListener('click', function(event) {
-    if (event.target === modal) {
-      closeModal();
-    }
-  });
   </script>
 </body>
 </html>
