--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ color: white;
 let carrito = [], pago = "";
 const precios = { "Vape 1": 200, "Vape 2": 200, "Vape 3": 200 };
 const galeria = {
-va: ["va1.jpg", "va2.jpg", "va3.jpg"],
+va: ["va.png", "c.png", "va3.jpg"],
 vape2: ["vape2-1.jpg", "vape2-2.jpg"],
 vape3: ["vape3-1.jpg", "vape3-2.jpg"]
 };
