--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ color: white;
 <div class="product-box">
 <img src="va.png" alt="Vape 1" onclick="openGallery('va')" />
 <h3>Pillow Talk 13mL</h3>
-<label>Hits: 8000</label>
+<label>Hits: 8,500</label>
 <p>Precio: $200</p>
 <p>Sabor:</p>
 <select id="sabor1" onchange="updateCart()">
@@ -175,10 +175,10 @@ color: white;
 </div>
 
 <div class="product-box">
-<img src="vape2.jpg" alt="Vape 2" onclick="openGallery('vape2')" />
-<h3>Vape 2</h3>
-<label>Hits: 8000</label>
-<p>Precio: $200</p>
+<img src="dosva.png" alt="Vape 2" onclick="openGallery('vape2')" />
+<h3>Snoopy Smoke Extra Tank 2 x 18ML</h3>
+<label>Hits: 15,000</label>
+<p>Precio: $250</p>
 <p>Sabor:</p>
 <select id="sabor2" onchange="updateCart()">
 <option>Fresa</option>
