--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@ color: white;
 
 <script>
 let carrito = [], pago = "";
-const precios = { "Vape 1": 200, "Vape 2": 200, "Vape 3": 200 };
+const precios = { "Vape 1": 200, "Vape 2": 250, "Vape 3": 200 };
 const galeria = {
 va: ["va.png", "va2.png", "va3.png"],
-vape2: ["dosva.png", "vape2-2.jpg"],
+vape2: ["dosva.png", "rojo2.png"],
 vape3: ["vape3-1.jpg", "vape3-2.jpg"]
 };
 let galeriaActual = [], imgIndex = 0;
