--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@ color: white;
 <p>Precio: $200</p>
 <p>Sabor:</p>
 <select id="sabor1" onchange="updateCart()">
-<option>Sandía</option>
-<option>Mango</option>
-<option>Uva</option>
+<option>clear</option>
+<option>Peach nectar</option>
+<option>Pink whit cream</option>
 </select>
 <label>Cantidad:</label>
 <input type="number" id="qty1" value="0" min="0" onchange="updateCart()" />
@@ -181,29 +181,44 @@ color: white;
 <p>Precio: $250</p>
 <p>Sabor:</p>
 <select id="sabor2" onchange="updateCart()">
-<option>Fresa</option>
-<option>Blueberry</option>
-<option>Plátano</option>
+<option>Bahanna mama</option>
+<option>Tropical rainbown blast</option>
+<option>Bluebeberry mint</option>
 </select>
 <label>Cantidad:</label>
 <input type="number" id="qty2" value="0" min="0" onchange="updateCart()" />
 </div>
 
 <div class="product-box">
-<img src="vape3.jpg" alt="Vape 3" onclick="openGallery('vape3')" />
-<h3>Vape 3</h3>
-<label>Hits: 8000</label>
-<p>Precio: $200</p>
+<img src="vape3.jpg" alt="" onclick="openGallery('vape3')" />
+<h3>Lost vape orioon bar</h3>
+<label>Hits: 7500</label>
+<p>Precio: $170</p>
 <p>Sabor:</p>
 <select id="sabor3" onchange="updateCart()">
-<option>Limón</option>
-<option>Piña</option>
-<option>Melón</option>
+<option>Euphria puddiing</option>
+<option>Strawberry watermelon</option>
+<option>Blueberry raspberry</option>
 </select>
 <label>Cantidad:</label>
 <input type="number" id="qty3" value="0" min="0" onchange="updateCart()" />
 </div>
 
+  <div class="product-box">
+<img src="dosva.png" alt="Vape 2" onclick="openGallery('vape2')" />
+<h3>Death row</h3>
+<label>Hits:7000</label>
+<p>Precio: $200</p>
+<p>Sabor:</p>
+<select id="sabor2" onchange="updateCart()">
+<option>Mixed berries</option>
+<option>Sour apple</option>
+<option>Peach ice</option>
+</select>
+<label>Cantidad:</label>
+<input type="number" id="qty2" value="0" min="0" onchange="updateCart()" />
+</div>
+  
 <button class="btn" onclick="prepareCart()">Continuar con el pedido</button>
 </div>
 
