--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ color: white;
 </div>
 
 <div class="product-box">
-<img src="vape3.jpg" alt="" onclick="openGallery('vape3')" />
+<img src="dosva.png" alt="Vape 2" onclick="openGallery('vape2')" />
 <h3>Lost vape orioon bar</h3>
 <label>Hits: 7500</label>
 <p>Precio: $170</p>
