--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ let carrito = [], pago = "";
 const precios = { "Vape 1": 200, "Vape 2": 250, "Vape 3": 200 };
 const galeria = {
 va: ["va.png", "va2.png", "rosa2.png"],
-vape2: ["dosva.png", "va2.png", "ama2.png"],
+vape2: ["dosva.png", "rosa2.png", "ama2.png"],
 vape3: ["vape3-1.jpg", "vape3-2.jpg"]
 };
 let galeriaActual = [], imgIndex = 0;
