--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ color: white;
 
 <div class="product-box">
 <img src="dosva.png" alt="Vape 2" onclick="openGallery('vape2')" />
-<h3>Lost vape orioon bar</h3>
+<h3>Lost vape orion bar</h3>
 <label>Hits: 7500</label>
 <p>Precio: $170</p>
 <p>Sabor:</p>
