--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ color: white;
 </div>
 
 <div class="product-box">
-<img src="dosva.png" alt="Vape 2" onclick="openGallery('vape2')" />
+<img src="v37.png" alt="Vape 2" onclick="openGallery('vape2')" />
 <h3>Lost vape orion bar</h3>
 <label>Hits: 7500</label>
 <p>Precio: $170</p>
@@ -267,9 +267,10 @@ color: white;
 let carrito = [], pago = "";
 const precios = { "Vape 1": 200, "Vape 2": 250, "Vape 3": 200 };
 const galeria = {
-va: ["va.png", "va2.png", "va3.png"],
+va1: ["va.png", "va2.png", "va3.png"],
 vape2: ["dosva.png", "rosa2.png", "ama2.png"],
-vape3: ["vape3-1.jpg", "vape3-2.jpg"]
+vape3: ["v37.png", "vape3-2.jpg"]
+vape4: ["dosva.png", "rosa2.png", "ama2.png"],
 };
 let galeriaActual = [], imgIndex = 0;
 
