--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ const galeria = {
 vape1: ["va.png", "va2.png", "va3.png"],
 vape2: ["dosva.png", "rosa2.png", "ama2.png"],
 vape3: ["v37.png", "vape3-2.jpg"]
-vape4: ["dosva.png", "rosa2.png", "ama2.png"],
+vape4: ["do.png", "rosa2.png", "hhh.png"],
 };
   
 let galeriaActual = [], imgIndex = 0;
