--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ color: white;
 let carrito = [], pago = "";
 const precios = { "Vape 1": 200, "Vape 2": 250, "Vape 3": 200 };
 const galeria = {
-  vape1: ["va.png", "va2.png", "va3.png"],
+  va: ["va.png", "va2.png", "va3.png"],
   vape2: ["dosva.png", "rosa2.png", "ama2.png"],
   vape3: ["v37.png", "vape3-2.jpg"],
   vape4: ["do.png", "rosa2.png", "hhh.png"]
