--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ const precios = { "Vape 1": 200, "Vape 2": 250, "Vape 3": 200 };
 const galeria = {
   va: ["va.png", "va2.png", "va3.png"],
   vape2: ["dosva.png", "rosa2.png", "ama2.png"],
-  vape3: ["v37.png", "v373.png", "v372.jpg"],
+  vape3: ["v37.png", "v373.png", "v372.png"],
   vape4: ["do.png", "rosa2.png", "hhh.png"],
 };
   
