--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ color: white;
 </div>
 
   <div class="product-box">
-<img src="dosva.png" alt="Vape 2" onclick="openGallery('vape2')" />
+<img src="gg.png" alt="Vape 2" onclick="openGallery('vape2')" />
 <h3>Death row</h3>
 <label>Hits:7000</label>
 <p>Precio: $200</p>
