--- a/index.html
+++ b/index.html
@@ -149,12 +149,13 @@ color: white;
 <body>
 
 <div class="page active" id="page1">
-<img id="logo" src="lo.png" alt="Logo">
-<h1 id="brand">SMiLe</h1>
+  <img id="logo" src="lo.png" alt="Logo">
+  <h1 id="brand">SMiLe</h1>
 
-<div id="cart-header">
-<img src="c.png" alt="Carrito">
-<div id="cart-count">Total: 0 productos - $0</div>
+  <div id="cart-header">
+    <img src="c.png" alt="Carrito">
+    <div id="cart-count">Total: 0 productos - $0</div>
+  </div>
 </div>
 
 <h2>Selecciona tu producto</h2>
