--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ const galeria = {
   va: ["va.png", "va2.png", "va3.png"],
   vape2: ["dosva.png", "rosa2.png", "ama2.png"],
   vape3: ["v37.png", "we.png", "fe.png"],
-  vape4: ["do.png", "r.png", "hhh.png"]
+  vape4: ["snp1.png", "snp2.png", "snp3.png"]
 };
   
 let galeriaActual = [], imgIndex = 0;
