--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ color: white;
 </div>
 
   <div class="product-box">
-<img src="gg.png" alt="Vape 4" onclick="openGallery('vape 4')" />
+<img src="snp1.png" alt="Vape 4" onclick="openGallery('vape 4')" />
 <h3>Death row</h3>
 <label>Hits:7000</label>
 <p>Precio: $200</p>
